Networking/Service Mesh/applications/http-apache/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    app: httpd
    service: httpd
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: httpd
